<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group
        android:id="@+id/group_search"
        android:checkableBehavior="none">

        <item
            android:id="@+id/globalsearch"
            android:icon="@drawable/ic_search_outline"
            android:orderInCategory="15"
            android:title="@string/global_search"
            android:visible="true"
            app:showAsAction="never" />

        <item
            android:id="@+id/starred_messages"
            android:icon="@drawable/ic_star_outlined"
            android:orderInCategory="16"
            android:title="@string/starred_messages"
            android:visible="true"
            app:showAsAction="never" />

    </group>

    <group
        android:id="@+id/group_actions"
        android:checkableBehavior="none">

        <item
            android:id="@+id/menu_new_group"
            android:icon="@drawable/ic_group_outline"
            android:orderInCategory="20"
            android:title="@string/title_addgroup"
            android:visible="true"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_new_distribution_list"
            android:icon="@drawable/ic_distribution_list"
            android:orderInCategory="30"
            android:title="@string/title_add_distribution_list"
            android:visible="true"
            app:showAsAction="never" />

    </group>

    <group
        android:id="@+id/stuff"
        android:checkableBehavior="none">

        <item
            android:id="@+id/menu_toggle_private_chats"
            android:icon="@drawable/ic_visibility"
            android:orderInCategory="50"
            android:title="@string/title_hide_private_chats"
            android:visible="false"
            app:showAsAction="never" />

        <item
            android:id="@+id/my_backups"
            android:icon="@drawable/ic_backup"
            android:orderInCategory="55"
            android:title="@string/my_backups_title"
            app:showAsAction="never" />

        <item
            android:id="@+id/archived"
            android:icon="@drawable/ic_archive"
            android:orderInCategory="60"
            android:title="@string/archived"
            app:showAsAction="never" />

        <item
            android:id="@+id/directory"
            android:icon="@drawable/ic_contacts"
            android:orderInCategory="75"
            android:title="@string/work_directory_title"
            android:visible="false"
            app:showAsAction="never" />

    </group>

    <group
        android:id="@+id/group_help"
        android:checkableBehavior="none">

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:orderInCategory="75"
            android:title="@string/menu_settings"
            app:showAsAction="never" />

        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help"
            android:orderInCategory="80"
            android:title="@string/support"
            app:showAsAction="never" />

    </group>

    <item
        android:id="@+id/menu_lock"
        android:icon="@drawable/ic_lock"
        android:orderInCategory="10"
        android:title="@string/title_lock"
        android:visible="true"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>
