<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/grid_unit_x3">

    <TextView
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/forgot_your_id" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/grid_unit_x1"
        android:layout_weight="1"
        android:background="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/grid_unit_x2">

            <TextView
                style="@style/MaterialAlertDialog.Material3.Body.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/safe_search_id_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_unit_x2"
                android:hint="@string/linked_mobile">

                <ch.threema.app.ui.ThreemaTextInputEditText
                    android:id="@+id/safe_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_unit_x2"
                android:hint="@string/linked_email">

                <ch.threema.app.ui.ThreemaTextInputEditText
                    android:id="@+id/safe_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <ch.threema.app.ui.interop.TextButtonPrimaryXml
            android:id="@+id/cancel_compose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/grid_unit_x1"
            app:textButtonPrimary_text="@string/cancel" />

        <ch.threema.app.ui.interop.TextButtonPrimaryXml
            android:id="@+id/ok_compose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:textButtonPrimary_text="@string/ok" />

    </LinearLayout>

</LinearLayout>
