<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/top_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:clipToPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="@dimen/grid_unit_x2">

                <TextView
                    android:id="@+id/safe_restore_title"
                    style="@style/WizardTextHeadlineLargeEmphasized"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/safe_restore" />

                <TextView
                    android:id="@+id/safe_restore_subtitle"
                    style="@style/WizardTextBodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/grid_unit_x2"
                    android:gravity="center_horizontal"
                    android:text="@string/safe_restore_enter_id" />

                <TextView
                    android:id="@+id/forgot_id"
                    style="@style/WizardTextBodyMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_unit_x3"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="end"
                    android:text="@string/forgot_your_id"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/safe_id_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_unit_x0_5"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <ch.threema.app.ui.ThreemaTextInputEditText
                        android:id="@+id/safe_edit_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/safe_threema_id"
                        android:imeOptions="actionDone"
                        android:inputType="textWebEditText"
                        android:singleLine="true">

                    </ch.threema.app.ui.ThreemaTextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <ch.threema.app.ui.interop.TextButtonPrimaryXml
                    android:id="@+id/advanced_options_compose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_unit_x2"
                    app:textButtonPrimary_text="@string/safe_advanced_options" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ch.threema.app.ui.interop.TextButtonPrimaryXml
                android:id="@+id/cancel_compose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/grid_unit_x1"
                android:layout_weight="1"
                app:textButtonPrimary_text="@string/cancel" />

            <ch.threema.app.ui.interop.ButtonPrimaryXml
                android:id="@+id/safe_restore_button_compose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/grid_unit_x1"
                android:layout_weight="1"
                app:buttonPrimary_text="@string/restore" />

        </LinearLayout>

    </LinearLayout>


</FrameLayout>
