<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/scooter"
            style="@style/WizardTextBodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wizard_paragraph_height"
            android:gravity="center_horizontal"
            android:text="@string/new_wizard_nickname_explain" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wizard_edit1_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wizard_paragraph_height"
            app:startIconDrawable="@drawable/ic_person_outline">

            <ch.threema.app.emojis.EmojiEditText
                android:id="@+id/wizard_edit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_wizard_hint_enter_nickname"
                android:imeOptions="actionGo"
                android:inputType="textNoSuggestions"
                android:minHeight="@dimen/wizard_default_view_height" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/disabled_by_policy"
            style="@style/WizardTextBodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_unit_x2"
            android:gravity="center_horizontal"
            android:text="@string/disabled_by_policy"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

</ScrollView>
